# Qt5_study

./: README.md
pyQt5/ 第十一章 液晶数字显示屏QLCDNumber/: 11.1 简单示例.py  电脑钟表插件.py
pyQt5/第一章/: First.py  two.py
pyQt5/第七章 各种按钮介绍/: 7.1 QPushButton.py  7.2 QToolButton.py  7.3 QRadioButton.py  7.4 QCheckBox.py
pyQt5/第三章 布局管理/: 3.3 混合使用QVBoxLayout和QHBoxLayout.py  3.4 表单布局QFormLayout.py  3.5 网格布局QGridLayout.py  ​3.3.2 混合使用QVBoxLayout和QHBoxLayout.py  垂直布局QVBoxLayout.py  水平布局QHBoxLayout.py
pyQt5/第九章 滑动条QSlider和表盘QDial/: 9.1 QSlider.py  ​9.2 QDial.py
pyQt5/第二十一章 滚动区域QScrollArea和滚动条QScrollBar/: 21.1 示例.py
pyQt5/第二十三章 主窗口QMainWindow/: 23.1 记事本应用.py  23.3 程序启动画面QSplashScreen.py
pyQt5/第二十四章 装入更多控件/: 24.1 拆分窗口QSplitter.py  24.3 堆叠窗口QStackedWidget.py  ​24.4 停靠窗口QDockWidget.py
pyQt5/第二章 信号与槽/: 01.py  一个信号与另外一个信号连接.py  一个信号连接多个槽.py  多个信号连接同一个槽.py  自定义信号.py
pyQt5/第五章 完善登录框小程序/: 5.1 登录界面布局.py  5.2 完善单行文本输入框和按钮功能.py  5.3 完善注册界面布局及功能.py  5.3.2 完善注册界面布局及功能.py  5.4 整合登录界面和注册界面.py  5.4.2 整合登录界面和注册界面.py  5.4.3 整合登录界面和注册界面.py
pyQt5/第八章 下拉选择框QCombox和数字调节框QSpinBox/: 8.1 QComboBox.py  ​8.2 QSpinBox.py
pyQt5/第六章 文本编辑框QTextEdit和文本浏览框QTextBrowser/: 6.1 同步显示文本.py
pyQt5/第十七章 事件处理/: 17.1 窗口关闭事件.py  17.2 鼠标事件.py  saved.txt  ​17.3 键盘事件.py
pyQt5/第十二章 与日期时间相关的控件/: 12.1 QCalendarWidget.py
pyQt5/第十五章 组合框QGroupBox和工具箱QToolBox/: 15.1 QGroupBox.py  15.2 QToolBox.py
pyQt5/第十八章 拖放与剪贴板/: 18.1 拖放.py  18.2 剪贴板.py  文档.md
pyQt5/第十六章 窗口坐标/: 16.1 理解坐标体系.py
pyQt5/第十四章 快速制作界面——Qt Designer/: designer.py  designer.ui  test.py  生成命令.txt
pyQt5进阶/第三十二章 动画/: 改变下按钮颜色.py  (+7 more)
workspace/First/: CMakeLists.txt
(+56 files in other folders)
